tests/errors/typecheck/test_tc_06_if_cond_type.pc
#import std.console;
int main() {
    int x = 5;
    if x {
        console.println("hello");
    }
    return 0;
}
